# GameServerManager

./: README.md
Daemon/: Cargo.toml  README.md
Daemon/deploy/: game-host-daemon.env.example  game-host-daemon.service
Daemon/src/: auth.rs  config.rs  docker.rs  error.rs  game_presets.rs  main.rs  manager.rs  models.rs  routes.rs  state.rs
backend/: Cargo.toml  README.md
backend/deploy/: grant-gsm-backend.sql  gsm-backend.service
backend/migrations/: 0001_initial_schema.sql  0002_seed_local_node.sql  0003_add_game_kind.sql  0004_add_server_settings.sql
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/handlers/: auth.rs  servers.rs
backend/src/middleware/: auth.rs
backend/src/models/: auth.rs  db.rs
backend/src/models/api/: auth.rs  mod.rs  servers.rs
backend/src/node_client/: mod.rs
backend/src/services/: auth.rs  errors.rs  mod.rs  servers.rs
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  api.ts  style.css
frontend/src/layouts/: AdminLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: authStore.ts  serverStore.ts  uiStore.ts
frontend/src/utils/: auth.ts
frontend/src/views/: CreateServerView.vue  DashboardView.vue  LoginView.vue  ServerDetailView.vue
